Bug 458635 - Language Tool set to "français", in the composer LT is set to "anglais"
Summary: Language Tool set to "français", in the composer LT is set to "anglais"
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 5.21.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-02 10:38 UTC by Philippe ROUBACH
Modified: 2022-09-02 17:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.1
Sentry Crash Report:


Attachments
in kmail settings you can see that LT is set to "français" (132.33 KB, image/png)
2022-09-02 10:38 UTC, Philippe ROUBACH
Details
in composer you can see that LT is set to "anglais" (61.81 KB, image/png)
2022-09-02 10:39 UTC, Philippe ROUBACH
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2022-09-02 10:38:21 UTC
Created attachment 151778 [details]
in kmail settings you can see that LT is set to "français"

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. launch the composer
2. type your message
3. launch grammar check

OBSERVED RESULT

you see that LT is set to "anglais" then no error is found.

EXPECTED RESULT

you see that LT is set to "français" according to check french grammar.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.67.0
Qt Version: 5.15.5
KDE Gears 22.08.0

ADDITIONAL INFORMATION
Comment 1 Philippe ROUBACH 2022-09-02 10:39:13 UTC
Created attachment 151779 [details]
in composer you can see that LT is set to "anglais"
Comment 2 Laurent Montel 2022-09-02 15:46:52 UTC
I confirm it.
I will fix it soon
Comment 3 Laurent Montel 2022-09-02 17:53:37 UTC
Git commit 35dfdc8846cd6758db2c866542edea35d8581847 by Laurent Montel.
Committed on 02/09/2022 at 17:53.
Pushed by mlaurent into branch 'release/22.08'.

Fix bug 458635 :  Language Tool set to "français", in the composer LT is set to "anglais"
FIXED-IN: 5.21.1

M  +2    -0    kmail/grammarplugins/languagetool/src/languagetoolresultwidget.cpp

https://invent.kde.org/pim/kdepim-addons/commit/35dfdc8846cd6758db2c866542edea35d8581847