Fix bug 458635 :  Language Tool set to "français", in the composer LT is set to "anglais"

BUG: 458635
FIXED-IN: 5.21.1